<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme"
    tools:context="com.foxyourprivacy.f0x1t.activities.OnboardingActivity">



        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="107dp"
            android:contentDescription="@string/foxITlogo"
            android:src="@mipmap/logoold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#00ffff00"
            android:contentDescription="@string/onboardigProgress1"
            android:foregroundGravity="bottom|center_horizontal"
            android:src="@mipmap/newdots">

        </ImageView>

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="230dp"
            android:text="@string/onboarding1text1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/WelcomeDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/WelcomeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/onboarding1text2"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>