<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="40dp">


    <TextView
        android:id="@+id/text_permission_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/permissionHeadline"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/text_permission_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/image_app_icon"
        android:text="@string/permissionName"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <ImageView
        android:id="@+id/image_app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/animalSymbol"
        android:longClickable="false"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:src="@mipmap/ic_cat" />


</RelativeLayout>
