<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/license_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:text="@string/apacheFoundation" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/licenseExplanation" />

        <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView10"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/apacheL"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10sp" />
        </ScrollView>
    </RelativeLayout>

