<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/whole_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:layout_weight="0.11"
        android:background="@color/creme">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:background="@color/creme">

            <TextView
                android:id="@+id/text_product_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_amount"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/buyLesson"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/doYouWant"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="13dp"
                android:layout_toStartOf="@+id/imageView3"
                android:text="@string/tradeAmountLesson"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_product_type"
                android:layout_alignEnd="@+id/textView5"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="19dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/mushroom"
                android:maxWidth="35dp"
                android:minHeight="35dp"
                android:src="@mipmap/mushroom" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/creme">


            <Button
                android:id="@+id/button_no"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:minWidth="70dp"
                android:singleLine="true"
                android:text="@string/no" />

            <Button
                android:id="@+id/button_yes"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:minWidth="70dp"
                android:text="@string/yes" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>