<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:padding="2dp">

            <RelativeLayout
                android:layout_width="330dp"
                android:layout_height="310dp"
                android:layout_gravity="center"
                android:background="@color/creme">

                <ImageView
                    android:id="@+id/image_acorn_symbol"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/thecapitalist"
                    android:src="@mipmap/test_trophy" />

                <TextView
                    android:id="@+id/text_trophy_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_acorn_symbol"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:gravity="top|center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/capitalist"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#65bbb3"
                    android:textSize="28dp" />

                <TextView
                    android:id="@+id/text_trophy_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_trophy_name"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/trophyDescription"
                    android:textColor="#ff80cbc4" />
            </RelativeLayout>
        </FrameLayout>

</RelativeLayout>