<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whole_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:layout_weight="0.11"
        android:background="@drawable/rounded_corners">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:background="@drawable/rounded_corners">

            <TextView
                android:id="@+id/text_product_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:maxWidth="240dp"
                android:text="@string/analysisStart"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:textColor="#323232" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corners">


            <Button
                android:id="@+id/button_no"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:minWidth="70dp"
                android:singleLine="true"
                android:text="@string/no" />

            <Button
                android:id="@+id/button_yes"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:minWidth="70dp"
                android:text="@string/yes" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>